fix sidebar overlapping and change navbar theme

--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -1,3 +1,7 @@
 #sidebar-wrapper{
 	position: fixed;
 }
+
+#content{
+	margin-left: 270px;
+}
